Se adiciona carpeta recursos

--- a/Src/WebApi/appsettings.Development.json
+++ b/Src/WebApi/appsettings.Development.json
@@ -8,7 +8,11 @@
   },
 
   "JwtSettings": {
-    "SecretKey": "my_super_secret_key",
+    "SecretKey": "LlaveSecreta854652",
     "ExpirationSeconds": 1800
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ALEXC\\SQLEXPRESS;Initial Catalog=BlogEngineManual;Integrated Security=True"
   }
 }
